🙈 Заменил `cssnext` на `postcss-cssnext`

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "babel-runtime": "^5.8.25",
     "browser-sync": "^2.9.8",
     "css-mqpacker": "^4.0.0",
-    "cssnext": "^1.8.4",
     "eslint": "^1.5.1",
     "fs-extra": "^0.26.0",
     "gulp": "gulpjs/gulp#4.0",
@@ -27,6 +26,7 @@
     "node-libs-browser": "^0.5.3",
     "postcss-assets": "^3.0.2",
     "postcss-css-variables": "^0.5.0",
+    "postcss-cssnext": "^2.2.0",
     "postcss-import": "^7.0.0",
     "postcss-mixins": "^2.1.0",
     "postcss-nested": "^1.0.0",
