--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "normalize.css": "^3.0.3",
-    "prismjs": "1.3.0",
+    "normalize.css": "^4.1.1",
+    "prismjs": "^1.4.1",
     "prismjs-default-theme": "0.0.1"
   },
   "devDependencies": {
