--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,14 +2,11 @@
   "rules": {
     "color-hex-case": "lower",
     "color-hex-length": "long",
-    "color-named": null,
-    "color-no-hex": null,
     "color-no-invalid-hex": true,
 
-    "font-family-name-quotes": "double-unless-keyword",
-    "font-weight-notation": null,
+    "font-family-name-quotes": "always-unless-keyword",
+    "font-family-no-duplicate-names": true,
 
-    "function-blacklist": null,
     "function-calc-no-unspaced-operator": true,
     "function-comma-newline-after": "always-multi-line",
     "function-comma-newline-before": "never-multi-line",
@@ -18,49 +15,28 @@
     "function-linear-gradient-no-nonstandard-direction": true,
     "function-max-empty-lines": 0,
     "function-name-case": "lower",
-    "function-parentheses-newline-inside": null,
     "function-parentheses-space-inside": "never",
-    "function-url-data-uris": null,
-    "function-url-quotes": "double",
-    "function-whitelist": null,
+    "function-url-quotes": "always",
     "function-whitespace-after": "always",
 
     "number-leading-zero": "always",
-    "number-max-precision": null,
     "number-no-trailing-zeros": true,
-    "number-zero-length-no-unit": true,
+    "length-zero-no-unit": true,
 
     "string-no-newline": true,
     "string-quotes": "double",
 
-    "time-no-imperceptible": null,
-
-    "unit-blacklist": null,
     "unit-case": "lower",
     "unit-no-unknown": true,
-    "unit-whitelist": null,
-
-    "value-no-vendor-prefix": null,
 
     "value-keyword-case": "lower",
     "value-list-comma-newline-after": "always-multi-line",
     "value-list-comma-newline-before": "never-multi-line",
     "value-list-comma-space-after": "always-single-line",
     "value-list-comma-space-before": "never",
+    "value-list-max-empty-lines": 0,
 
-    "custom-property-no-outside-root": null,
-    "custom-property-pattern": null,
-
-    "shorthand-property-no-redundant-values": null,
-
-    "property-blacklist": null,
     "property-case": "lower",
-    "property-no-vendor-prefix": null,
-    "property-unit-blacklist": null,
-    "property-unit-whitelist": null,
-    "property-value-blacklist": null,
-    "property-value-whitelist": null,
-    "property-whitelist": null,
 
     "keyframe-declaration-no-important": true,
 
@@ -69,57 +45,39 @@
     "declaration-colon-newline-after": "always-multi-line",
     "declaration-colon-space-after": "always-single-line",
     "declaration-colon-space-before": "never",
-    "declaration-no-important": null,
 
     "declaration-block-no-duplicate-properties": true,
-    "declaration-block-no-ignored-properties": true,
     "declaration-block-no-shorthand-property-overrides": true,
-    "declaration-block-properties-order": null,
     "declaration-block-semicolon-newline-after": "always",
     "declaration-block-semicolon-newline-before": "never-multi-line",
     "declaration-block-semicolon-space-after": "always-single-line",
     "declaration-block-semicolon-space-before": "never",
-    "declaration-block-single-line-max-declarations": null,
     "declaration-block-trailing-semicolon": "always",
 
+    "block-closing-brace-empty-line-before": "never",
     "block-closing-brace-newline-after": "always",
     "block-closing-brace-newline-before": "always",
     "block-closing-brace-space-after": "always-single-line",
     "block-closing-brace-space-before": "always-single-line",
     "block-no-empty": true,
-    "block-no-single-line": true,
     "block-opening-brace-newline-after": "always",
-    "block-opening-brace-newline-before": null,
     "block-opening-brace-space-after": "always-single-line",
     "block-opening-brace-space-before": "always",
 
     "selector-attribute-brackets-space-inside": "never",
-    "selector-attribute-operator-blacklist": null,
     "selector-attribute-operator-space-after": "never",
     "selector-attribute-operator-space-before": "never",
-    "selector-attribute-operator-whitelist": null,
-    "selector-class-pattern": null,
+    "selector-attribute-quotes": "always",
     "selector-combinator-space-after": "always",
     "selector-combinator-space-before": "always",
-    "selector-id-pattern": null,
+    "selector-descendant-combinator-no-non-space": true,
     "selector-max-compound-selectors": 3,
-    "selector-max-specificity": null,
-    "selector-no-attribute": null,
-    "selector-no-combinator": null,
-    "selector-no-id": null,
-    "selector-no-qualifying-type": [true, {
-      "ignore": ["attribute"]
-    }],
-    "selector-no-type": null,
-    "selector-no-universal": null,
-    "selector-no-vendor-prefix": null,
     "selector-pseudo-class-case": "lower",
     "selector-pseudo-class-no-unknown": true,
     "selector-pseudo-class-parentheses-space-inside": "never",
     "selector-pseudo-element-case": "lower",
     "selector-pseudo-element-colon-notation": "double",
     "selector-pseudo-element-no-unknown": true,
-    "selector-root-no-composition": null,
     "selector-type-case": "lower",
     "selector-type-no-unknown": true,
     "selector-max-empty-lines": 0,
@@ -129,26 +87,20 @@
     "selector-list-comma-space-after": "always-single-line",
     "selector-list-comma-space-before": "never",
 
-    "root-no-standard-properties": null,
-
-    "rule-nested-empty-line-before": ["always", {
+    "rule-empty-line-before": ["always", {
       "except": ["first-nested"],
-      "ignore": ["after-comment"]
-    }],
-    "rule-non-nested-empty-line-before": ["always", {
       "ignore": ["after-comment"]
     }],
 
     "media-feature-colon-space-after": "always",
     "media-feature-colon-space-before": "never",
-    "media-feature-name-no-vendor-prefix": null,
-    "media-feature-no-missing-punctuation": true,
+    "media-feature-name-case": "lower",
+    "media-feature-name-no-unknown": true,
+    "media-feature-name-no-vendor-prefix": true,
+    "media-feature-parentheses-space-inside": "never",
     "media-feature-range-operator-space-after": "always",
     "media-feature-range-operator-space-before": "always",
 
-    "custom-media-pattern": null,
-
-    "media-query-parentheses-space-inside": "never",
     "media-query-list-comma-newline-after": "always-multi-line",
     "media-query-list-comma-newline-before": "never-multi-line",
     "media-query-list-comma-space-after": "always-single-line",
@@ -157,37 +109,31 @@
     "at-rule-empty-line-before": ["always", {
       "except": [
         "first-nested",
-        "blockless-group"
+        "blockless-after-blockless"
       ],
       "ignore": ["after-comment"]
     }],
     "at-rule-name-case": "lower",
+    "at-rule-name-newline-after": "always-multi-line",
     "at-rule-name-space-after": "always",
-    "at-rule-no-vendor-prefix": null,
+    "at-rule-no-unknown": [true, {
+      "ignoreAtRules": ["mixin", "define-mixin"]
+    }],
     "at-rule-semicolon-newline-after": "always",
 
-    "stylelint-disable-reason": "always-before",
-
-    "comment-empty-line-before": null,
-    "comment-whitespace-inside": null,
-    "comment-word-blacklist": null,
+    "comment-no-empty": true,
 
     "indentation": [2, {
       "except": ["value"]
     }],
 
     "max-empty-lines": 2,
-    "max-line-length": null,
     "max-nesting-depth": 3,
-    "no-browser-hacks": true,
-    "no-descending-specificity": null,
     "no-duplicate-selectors": true,
+    "no-empty-source": true,
     "no-eol-whitespace": true,
     "no-extra-semicolons": true,
-    "no-indistinguishable-colors": null,
     "no-invalid-double-slash-comments": true,
-    "no-missing-eof-newline": true,
-    "no-unknown-animations": null,
-    "no-unsupported-browser-features": null
+    "no-missing-end-of-source-newline": true
   }
 }
