--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,6 +1,6 @@
 {
   "tagname-lowercase": true,
-  "attr-lowercase": true,
+  "attr-lowercase":  ["viewBox", "preserveAspectRatio"],
   "attr-value-double-quotes": true,
   "attr-value-not-empty": false,
   "attr-no-duplication": true,
